added all content

--- a/index.html
+++ b/index.html
@@ -20,15 +20,34 @@
         <div class="hero">
             <div class="hero-card">
                 <div class="card-title">This website is awesome</div>
-                <div class="card-text">This website has some subtext</div>       
+                <div class="card-text">This website has some subtext that goes under the main title. It has a smaller font and lower contrast.</div> 
                 <div class="card-button">Sign up</div>
             </div>
             <div class="hero-img"><img src="img/hero-img.jpg" alt="This is a placeholder"></div>
         </div>
     </div>
-    <div class="info"></div>
-    <div class="quote"></div>
-    <div class="signup"></div>
-    <div class="footer"></div>
+    <div class="info">
+        <div class="info-title">Some random information</div>
+        <div class="info-content">
+            <div class="content1"><img src="img/info.svg" alt="img1">This is some subtext</div>
+            <div class="content2"><img src="img/info.svg" alt="img2">This is some subtext, and even more text</div>
+            <div class="content3"><img src="img/info.svg" alt="img3">This is some subtext</div>
+            <div class="content4"><img src="img/info.svg" alt="img4">This is some subtext</div>
+        </div>
+    </div>
+    <div class="quote-area">
+        <div class="quote">"I've never really wanted to go to Japan. Simply because I don't like eating fish. And I know that's very popular out there in Africa."</div>
+        <div class="author">-Britney Spears</div>
+    </div>
+    <div class="signup">
+        <div class="call">
+            <div class="call-content">
+                <div class="call-title">Call to action! Get it while it's hot!</div>
+                <div class="call-sub">Sign up for our product using that button there to the right. Just click it.</div>
+            </div>
+            <div class="call-button">Sign up</div>
+        </div>
+    </div>
+    <div class="footer">Copyright © The Odin Project 2021</div>
 </body>
 </html>
