--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <div class="info">
         <div class="info-title">Some random information</div>
         <div class="info-content">
-            <div class="content1"><img src="img/info.svg" alt="img1">This is some subtext</div>
-            <div class="content2"><img src="img/info.svg" alt="img2">This is some subtext, and even more text</div>
-            <div class="content3"><img src="img/info.svg" alt="img3">This is some subtext</div>
-            <div class="content4"><img src="img/info.svg" alt="img4">This is some subtext</div>
+            <div class="content1"><img src="" alt="img1">This is some subtext</div>
+            <div class="content2"><img src="" alt="img2">This is some subtext, and even more text</div>
+            <div class="content3"><img src="" alt="img3">This is some subtext</div>
+            <div class="content4"><img src="" alt="img4">This is some subtext</div>
         </div>
     </div>
     <div class="quote-area">
